--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,7 +26,12 @@ tenacity==8.2.3
 
 sqlalchemy>=2.0
 asyncpg>=0.29.0
+psycopg2-binary>=2.9.0
 alembic>=1.12.0
 
 # ---- Password hashing ----
+bcrypt==3.2.2
 passlib[bcrypt]==1.7.4
+
+# ---- JWT ----
+python-jose[cryptography]==3.4.0
