--- a/backend/.env
+++ b/backend/.env
@@ -18,3 +18,5 @@ DATABASE_URL=postgresql+asyncpg://postgres:postgres@postgres:5432/liveboost
 
 # OpenAI API (for AI processing in worker)
 OPENAI_API_KEY=your-openai-api-key-here
+
+FRONTEND_URL=http://localhost:5173
