--- a/backend/.env
+++ b/backend/.env
@@ -19,4 +19,4 @@ DATABASE_URL=postgresql+asyncpg://postgres:postgres@postgres:5432/liveboost
 # OpenAI API (for AI processing in worker)
 OPENAI_API_KEY=your-openai-api-key-here
 
-FRONTEND_URL=http://localhost:5173
+; FRONTEND_URL=http://localhost:5173
