--- a/.github/workflows/master_fast-api-kyogoku.yml
+++ b/.github/workflows/master_fast-api-kyogoku.yml
@@ -13,14 +13,15 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-      - name: Set up Python version
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-
+      # (Optional) Local sanity check – không ảnh hưởng Azure build
       - name: Create venv and install dependencies (backend only)
         working-directory: backend
         run: |
@@ -46,13 +47,21 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: python-app
-       
+   
+
+      - name: Debug deploy structure (1 lần cho chắc)
+        run: |
+          echo "ROOT:"
+          ls -la
+          echo "python-app:"
+          ls -la python-app
+          echo "python-app/backend:"
+          ls -la python-app/backend
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'fast-api-kyogoku'
-          slot-name: 'Production'
+          app-name: fast-api-kyogoku
+          slot-name: Production
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CADC6849BE114E58AD1CB2C9281CB379 }}
-          package: backend
-
+          package: python-app/backend
