--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
     "react-calendar": "^6.0.0",
     "react-datepicker": "^9.0.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
