--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "react-datepicker": "^9.0.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
+    "i18next": "^23.3.1",
+    "react-i18next": "^12.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
