--- a/.github/workflows/master_aitherhubapi.yml
+++ b/.github/workflows/master_aitherhubapi.yml
@@ -63,4 +63,4 @@ jobs:
         with:
           app-name: aitherhubAPI
           slot-name: Production
-          package: ./backend
+          package: ./python-app/backend
