--- a/.github/workflows/master_aitherhubapi.yml
+++ b/.github/workflows/master_aitherhubapi.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Python app to Azure Web App - aitherhubAPI
+name: Build and deploy Python app to Azure Web App - fast-api-kyogoku
 
 on:
   push:
@@ -21,14 +21,15 @@ jobs:
         with:
           python-version: '3.11'
 
+      # (Optional) Local sanity check – không ảnh hưởng Azure build
       - name: Create venv and install dependencies (backend only)
         working-directory: backend
         run: |
           python -m venv antenv
           source antenv/bin/activate
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # Upload ONLY backend folder
       - name: Upload backend artifact
         uses: actions/upload-artifact@v4
         with:
@@ -40,27 +41,19 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write
-      contents: read
-
+  
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: python-app
           path: .
-
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_AA4E9EC299D1433D9FF12541F06BA50D }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_AE01A735F8B046C49C5F169706AC5842 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_8E4F3767CE0647AEAA62C4C721F843FE }}
-
+  
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: aitherhubAPI
           slot-name: Production
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CADC6849BE114E58AD1CB2C9281CB379 }}
           package: .
+
