--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,3 +37,6 @@ passlib[bcrypt]==1.7.4
 # ---- JWT ----
 python-jose[cryptography]==3.4.0
 openai>=1.0.0
+
+# ---- RAG / Vector DB ----
+qdrant-client>=1.7.0
