--- a/.github/workflows/githubworkflowsdeploy-swa-frontend.yml
+++ b/.github/workflows/githubworkflowsdeploy-swa-frontend.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: frontend-build
+          retention-days: 1
           path: |
             frontend/dist
             !frontend/node_modules
