--- a/.github/workflows/master_aitherhubapi.yml
+++ b/.github/workflows/master_aitherhubapi.yml
@@ -33,6 +33,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: python-app
+          retention-days: 1
           path: |
             backend
             !backend/antenv/
