--- a/.github/workflows/master_fast-api-kyogoku.yml
+++ b/.github/workflows/master_fast-api-kyogoku.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: python-app
+          retention-days: 1
           path: |
             backend
             !backend/antenv/
