fix: Chrome extension token sync & LiveDashboard stream URL for extension sessions
- Add aitherhub_bridge.js content script to sync JWT token from AitherHub website localStorage to extension
- Add BRIDGE_TOKEN_SYNC message handler in background.js
- Update manifest.json with aitherhub.com content script entry
- Fix LiveDashboard: extension sessions no longer stuck on 'ストリームURLを取得中...'
- Extension sessions now show dedicated UI with TikTok link instead of waiting for HLS stream URL
- Skip loading steps directly to complete for extension sessions

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -26,6 +26,14 @@
       "js": ["src/content.js"],
       "css": ["src/content.css"],
       "run_at": "document_idle"
+    },
+    {
+      "matches": [
+        "https://aitherhub.com/*",
+        "https://www.aitherhub.com/*"
+      ],
+      "js": ["src/aitherhub_bridge.js"],
+      "run_at": "document_idle"
     }
   ],
   "action": {
