--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "AitherHub LIVE Connector",
-  "version": "1.1.0",
-  "description": "TikTok Shop LIVEマネージャーからリアルタイムデータを取得し、AitherHubに送信します",
+  "version": "1.4.0",
+  "description": "TikTok Shop LIVEダッシュボードにAI司令塔オーバーレイを表示。リアルタイムAI分析・提案・コメント・商品管理",
   "permissions": [
     "activeTab",
     "storage",
@@ -23,8 +23,8 @@
         "https://shop.tiktok.com/streamer/*",
         "https://shop.tiktok.com/workbench/*"
       ],
-      "js": ["src/content.js"],
-      "css": ["src/content.css"],
+      "js": ["src/content.js", "src/ai_commander.js"],
+      "css": ["src/content.css", "src/ai_commander.css"],
       "run_at": "document_idle"
     },
     {
